replaced deprecated metod for Promises in backend

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
 <head>
   <!-- Meta, title, CSS, favicons, etc. -->
   <meta charset="utf-8">
-  <title><koiCoders> - We code solutions, we make dreams come true</title>
+  <title><koiders> - We code solutions, we make dreams come true</title>
   <meta name="keywords" content="" />
-  <meta name="description" content="<koiCoders> - We code solutions, we make dreams come true">
-  <meta name="author" content="<koiCoders>">
+  <meta name="description" content="<koiders> - We code solutions, we make dreams come true">
+  <meta name="author" content="<koiders>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Font CSS (Via CDN) -->
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600'>
   <!-- Theme CSS -->
